# dask-mpi

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  README.rst  environment-dev.yml  environment.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml  env-2.7-mpich.yml  env-2.7-openmpi.yml  env-3.6-mpich.yml  env-3.6-openmpi.yml  env-3.7-mpich-upstream-dev.yml  env-3.7-mpich.yml  env-3.7-openmpi.yml  install.sh
.github/: release-drafter.yml
.github/workflows/: linting.yml  release-drafter.yml  release.yml  tests.yml
ci/: env-mpich.yml  env-openmpi.yml  environment-dev-2.7-mpich.yml  environment-dev-2.7-opempi.yml  environment-dev-2.7.yml  environment-dev-3.6-mpich.yml  environment-dev-3.6-openmpi.yml  environment-dev-3.6.yml  install-circle.sh
dask_mpi/: __init__.py  _version.py  cli.py  common.py  core.py  exceptions.py  execute.py  initialize.py
dask_mpi/tests/: basic.py  conftest.py  core_basic.py  core_context.py  core_no_exit.py  execute_basic.py  execute_no_exit.py  execute_script.py  test_cli.py  test_core.py  test_execute.py  test_execute_basic.py  test_initialize.py  test_initialize_basic.py  test_initialize_no_exit.py  test_no_exit.py
docs/: environment.yml
docs/source/: api.rst  batch.rst  cli.rst  conf.py  develop.rst  gpu.rst  history.rst  howitworks.rst  index.rst  install.rst  interactive.rst
